--- a/app/src/main/res/layout/recyclerbestselling_item.xml
+++ b/app/src/main/res/layout/recyclerbestselling_item.xml
@@ -12,7 +12,19 @@
         android:layout_margin="8dp"
         android:layout_height="wrap_content">
 
+        <Button
 
+            android:id="@+id/moneyOff_btn"
+            android:layout_width="70dp"
+
+            android:layout_height="18dp"
+           android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+
+            android:background="@color/design_default_color_primary"
+            android:gravity="center"
+            android:text=" 34% OFF"
+            android:textColor="@color/white" />
 
 
         <LinearLayout
@@ -39,28 +51,21 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
+
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:orientation="horizontal"
+                        android:orientation="vertical"
+
                         android:layout_height="wrap_content">
-                        <Button
 
-                            android:id="@+id/moneyOff_btn"
-                            android:layout_marginTop="10dp"
-
-                            android:text=" 34% OFF"
-
-                            android:textColor="@color/white"
-                            android:background="@color/design_default_color_primary"
-                            android:layout_width="60dp"
-                            android:layout_height="20dp" />
 
                         <ImageView
-                            android:layout_marginLeft="20dp"
+
                             android:id="@+id/item_image"
                             android:layout_width="100dp"
-                            android:layout_height="100dp"
                             android:layout_gravity="center"
+                            android:layout_height="100dp"
+
                             android:background="@drawable/veg" />
 
 
@@ -70,15 +75,17 @@
 
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                       android:layout_gravity="center"
+                        android:gravity="center"
                         android:layout_marginTop="20dp"
                         android:orientation="horizontal">
                         <ImageView
                             android:id="@+id/imageView1"
                             android:layout_width="12dp"
-                            android:layout_marginTop="6dp"
+                            android:layout_marginRight="15dp"
+
                             android:layout_height="12dp"
 
                             android:background="@drawable/navimg"></ImageView>
@@ -104,7 +111,7 @@
 
                     <TextView
                         android:id="@+id/item_name"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="10dp"
@@ -116,7 +123,7 @@
 
                     <TextView
                         android:id="@+id/item_weight"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="10dp"
@@ -125,11 +132,13 @@
 
                     <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                         android:id="@+id/addcartbutton"
-                        android:layout_width="130dp"
-                        android:layout_height="30dp"
+                        android:layout_width="120dp"
+                        android:layout_height="20dp"
                         android:layout_centerVertical="true"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="10dp"
+
+
+                        android:layout_marginTop="20dp"
+                        android:layout_gravity="center"
                         android:layout_marginBottom="20dp"
                         app:backGroundColor="@color/text_color">
 
