--- a/app/src/main/res/layout/recyclerblockbastersale.xml
+++ b/app/src/main/res/layout/recyclerblockbastersale.xml
@@ -12,7 +12,18 @@
         android:layout_margin="8dp"
         android:layout_height="wrap_content">
 
+        <Button
 
+            android:id="@+id/moneyOff_btn1"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+
+            android:text=" 34% OFF"
+
+            android:textColor="@color/white"
+            android:background="@color/design_default_color_primary"
+            android:layout_width="80dp"
+            android:layout_height="20dp" />
 
 
         <LinearLayout
@@ -41,19 +52,9 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:orientation="horizontal"
+                        android:orientation="vertical"
                         android:layout_height="wrap_content">
-                        <Button
 
-                            android:id="@+id/moneyOff_btn1"
-                            android:layout_marginTop="10dp"
-
-                            android:text=" 34% OFF"
-
-                            android:textColor="@color/white"
-                            android:background="@color/design_default_color_primary"
-                            android:layout_width="80dp"
-                            android:layout_height="20dp" />
 
                         <ImageView
                             android:id="@+id/vegitable_image1"
@@ -67,11 +68,20 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:gravity="center"
                         android:layout_marginTop="20dp"
                         android:orientation="horizontal">
+                        <ImageView
+                            android:id="@+id/imageView1"
+
+                            android:layout_width="15dp"
+                            android:layout_marginRight="15dp"
+
+                            android:layout_height="12dp"
+
+                            android:background="@drawable/navimg"></ImageView>
 
                         <TextView
                             android:id="@+id/discountmoney1"
@@ -93,7 +103,7 @@
 
                     <TextView
                         android:id="@+id/itemname1"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="10dp"
@@ -104,7 +114,7 @@
 
                     <TextView
                         android:id="@+id/quantity1"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="10dp"
@@ -113,11 +123,12 @@
 
                     <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                         android:id="@+id/mybutton"
-                        android:layout_width="130dp"
-                        android:layout_height="30dp"
+                        android:layout_width="120dp"
+                        android:layout_height="20dp"
+                        android:layout_gravity="center"
                         android:layout_centerVertical="true"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="10dp"
+
+                        android:layout_marginTop="20dp"
                         android:layout_marginBottom="20dp"
                         app:backGroundColor="@color/text_color">
 
