--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     xmlns:custom="http://schemas.android.com/tools"
-    android:background="@color/colorGray"
+    android:background="@color/white"
     android:layout_height="wrap_content"
     android:orientation="vertical">
     <LinearLayout
@@ -12,20 +12,18 @@
         android:layout_height="wrap_content">
         <android.support.v4.view.ViewPager
             android:id="@+id/pager"
+            app:tabIndicatorColor="#976"
             android:layout_marginTop="40dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginLeft="50dp"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
+            android:layout_gravity="center"
             android:layout_height="150dp" />
         <me.relex.circleindicator.CircleIndicator
             android:id="@+id/indicator"
             custom:color="#D57518"
+             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="48dp" />
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@color/view_color1"/>
+
 
         <Button
             android:layout_marginTop="20dp"
@@ -139,7 +137,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="@color/view_color1"
+            android:background="@color/colorGray"
             android:layout_marginTop="20dp" />
 
         <TextView
@@ -183,7 +181,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="10dp"
-            android:background="@color/view_color1"
+            android:background="@color/colorGray"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"/>
 
@@ -219,7 +217,7 @@
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="@color/view_color1" />
+            android:background="@color/colorGray" />
         <ExpandableListView
             android:id="@+id/expandableListView"
             android:layout_width="match_parent"
