--- a/app/src/main/res/layout/recyclerbestselling_item.xml
+++ b/app/src/main/res/layout/recyclerbestselling_item.xml
@@ -8,6 +8,7 @@
 
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardview1"
         android:layout_width="wrap_content"
         android:layout_margin="8dp"
         android:layout_height="wrap_content">
