--- a/app/src/main/res/layout/recycler_savedbeyondgrosary.xml
+++ b/app/src/main/res/layout/recycler_savedbeyondgrosary.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
@@ -10,8 +10,8 @@
         android:id="@+id/cardview2"
         android:layout_width="150dp"
         android:elevation="10sp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
-        android:layout_gravity="center"
         android:background="@drawable/shadow"
         android:layout_height="wrap_content">
 
