--- a/app/src/main/res/layout/recyclertopsaverstoday.xml
+++ b/app/src/main/res/layout/recyclertopsaverstoday.xml
@@ -10,6 +10,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_margin="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_height="wrap_content">
 
 
