--- a/app/src/main/res/layout/recyler_plan.xml
+++ b/app/src/main/res/layout/recyler_plan.xml
@@ -15,6 +15,7 @@
         android:layout_gravity="center"
         android:layout_width="150dp"
         android:elevation="10sp"
+        android:layout_marginLeft="10dp"
         android:background="@drawable/shadow"
         android:layout_height="300dp"
         tools:ignore="MissingConstraints">
