--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,6 +33,6 @@
     <color name="shad">#857C7C</color>
     <color name="heading">#F44336</color>
 <color name="card">#53C4D5</color>
-
+<color name="cards">#52CDDF</color>
 
 </resources>
