--- a/app/src/main/res/layout/recycler_smartbachatclub.xml
+++ b/app/src/main/res/layout/recycler_smartbachatclub.xml
@@ -12,6 +12,7 @@
         android:id="@+id/cardview3"
         android:layout_width="150dp"
         android:elevation="10sp"
+        app:cardElevation="10sp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_gravity="center"
@@ -24,8 +25,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/imageView1"
-                android:background="@drawable/veg"
+                android:id="@+id/PImage"
                 android:layout_gravity="center"
                 android:layout_width="100dp"
                 android:layout_height="100dp" />
@@ -34,11 +34,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="30dp"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView1"
+                    android:id="@+id/PPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Rs259"
@@ -47,7 +47,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/PDiscPrice"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -56,10 +56,10 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/PTitle"
                 android:text="Chakki Fresh Atta"
                 android:textColor="@color/colorBlack"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="30dp"
                 android:textStyle="normal"
                 android:textSize="14dp"
                 android:layout_marginTop="10dp"
@@ -67,9 +67,9 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/PQuantity"
                 android:text="10 kg"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="30dp"
                 android:layout_width="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_height="wrap_content" />
@@ -128,6 +128,6 @@
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
-
-
 </LinearLayout>
+
+
