--- a/app/src/main/res/layout/activity_price.xml
+++ b/app/src/main/res/layout/activity_price.xml
@@ -200,6 +200,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/asked_question"
             android:layout_marginTop="10dp"
             android:orientation="horizontal"
             android:layout_marginBottom="10dp"
