--- a/app/src/main/res/layout/activity_see_all.xml
+++ b/app/src/main/res/layout/activity_see_all.xml
@@ -2,15 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:orientation="vertical"
-    android:layout_height="match_parent"
+    android:background="@color/colorGray"
+    android:layout_height="wrap_content"
     tools:context=".Activities.CategoryActivity">
 
 
     <android.support.v7.widget.RecyclerView
 
-        android:id="@+id/recycler"
+        android:id="@+id/recycler_viewitem"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
