--- a/app/src/main/res/layout/recyclerbestselling_item.xml
+++ b/app/src/main/res/layout/recyclerbestselling_item.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_height="wrap_content">
 
 
@@ -67,7 +67,7 @@
                             android:layout_gravity="center"
                             android:layout_height="100dp"
 
-                            android:background="@drawable/veg" />
+                         />
 
 
 
@@ -188,5 +188,7 @@
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
+
+
 
 </LinearLayout>
